--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
-name: CI
+name: CI/CD
 
 on:
   push:
-    branches:
-      - feature/setup-application
-  pull_request:
     branches:
       - feature/setup-application
 
@@ -21,10 +18,40 @@ jobs:
       with:
         python-version: '3.11'  # Set the Python version
 
-    - name: Install dependencies
+    - name: Install dependencies including pytest
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest
 
     - name: Run unit tests
       run: pytest
+
+  merge-to-main:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/feature/setup-application' && github.event_name == 'push' && github.event_name != 'pull_request'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Merge to main
+      run: git merge --no-ff origin/main
+
+    - name: Push to main
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
+
+  manager-approval:
+    runs-on: ubuntu-latest
+    needs: merge-to-main
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request'
+
+    steps:
+    - name: Request manager approval
+      uses: "marvinpinto/action-automatic-rebase@v2"
+      with:
+        comment: "This pull request is awaiting manager approval for merge."
