Update GitHub Actions workflow to merge into main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,4 +54,4 @@ jobs:
     - name: Request manager approval
       uses: "marvinpinto/action-automatic-rebase@v2"
       with:
-        comment: "This pull request is awaiting manager approval for merge."
+        comment: "This pull request is awaiting manager approval for merging."
