--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,31 +27,20 @@ jobs:
     - name: Run unit tests
       run: pytest
 
-  merge-to-main:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.ref == 'refs/heads/feature/setup-application' && github.event_name == 'push' && github.event_name != 'pull_request'
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
     - name: Merge to main
-      run: git merge --no-ff origin/main
-
-    - name: Push to main
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+      if: success()
+      run: |
+        git checkout main
+        git merge --no-ff $GITHUB_REF
+        git push origin main
 
   manager-approval:
     runs-on: ubuntu-latest
-    needs: merge-to-main
+    needs: build-and-test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request'
 
     steps:
     - name: Request manager approval
       uses: "marvinpinto/action-automatic-rebase@v2"
       with:
-        comment: "This pull request is awaiting manager approval for merging."
+        comment: "This pull request is awaiting manager approval for merge."
