Update GitHub Actions workflow to merge into main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       if: success()
       run: |
         git checkout main
-        git merge --no-ff $GITHUB_REF
+        git merge --no-ff origin/main
         git push origin main
 
   manager-approval:
