--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Merge to main
       if: success()
       run: |
+        git fetch origin main:main
         git checkout main
         git merge --no-ff origin/main
         git push origin main
