--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,15 @@ jobs:
     - name: Run unit tests
       run: pytest
 
+  merge-to-main:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/feature/setup-application' && github.event_name == 'push' && github.event_name != 'pull_request'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Merge to main
       if: success()
       run: |
@@ -34,10 +43,12 @@ jobs:
         git checkout main
         git merge --no-ff origin/main
         git push origin main
+      env:
+        PAT: ${{ secrets.PAT }}
 
   manager-approval:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: merge-to-main
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request'
 
     steps:
